--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,21 @@
+2005-01-08  Gary V. Vaughan  <gary@gnu.org>
+
+	* ChangeLog: Reformatting.
+	* HACKING: Fix section numbering.
+	(Editing 'ChangeLog'): New notes on ChangeLog entry format.
+
 2005-01-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/am-subdir.at tests/testsuite.at (AT_BOOTSTRAP,
-	AT_LIBTOOLIZE, AT_CHECK_LIBTOOLIZE) Rename to ..
-	(LT_AT_BOOTSTRAP, LT_AT_LIBTOOLIZE, LT_AT_CHECK_LIBTOOLIZE)
-	and make use of new names.
+	AT_LIBTOOLIZE, AT_CHECK_LIBTOOLIZE): Rename to ...
+	(LT_AT_BOOTSTRAP, LT_AT_LIBTOOLIZE, LT_AT_CHECK_LIBTOOLIZE):
+	...and make use of new names.
 
 2004-12-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/getopt.m4sh (func_version, func_usage, func_help):
 	Use `$SED -n' instead of `$SED RANGE {..}; d' as AIX sed cannot
-	handle the latter.  
+	handle the latter.
 	(func_help): start autoconf and automake in subshells to avoid
 	error messages from ash or Bourne shell if not available.
 
@@ -24,33 +30,37 @@
 
 	* Makefile.am, bootstrap, clcommit.m4sh, libtoolize.m4sh,
 	config/ltmain.m4sh: Replace `set --' with `set dummy [...]; shift'
-	for portability.  tests/sh.test: Test for this.
+	for portability.
+	* tests/sh.test: Test for this.
 
 2004-12-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
-	* libtoolize.m4sh, config/ltmain.m4sh (most functions):
-	New variable $opt_debug is either `:' or `set -x' depending on --debug.
-	Execute at most function entries to cater for ksh which resets `-x'.
+	* libtoolize.m4sh, config/ltmain.m4sh (most functions): New
+	variable $opt_debug is either `:' or `set -x' depending on
+	--debug.  Execute at most function entries to cater for ksh which
+	resets `-x'.
 	* tests/defs.m4sh: Ditto for VERBOSE=debug.
 
-	* m4/libtool.m4 (_LT_LINKER_SHLIBS)
-	[cygwin, mingw, pw32 ]: _LT_TAGVAR missing for `fix_srcfile_path'.
-	[ sysv4, sysv5 ]: _LT_TAGVAR missing for `export_dynamic_flag_spec'.
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin, mingw, pw32]:
+	_LT_TAGVAR missing for `fix_srcfile_path'.
+	[sysv4, sysv5]: _LT_TAGVAR missing for
+	`export_dynamic_flag_spec'.
 
 	* doc/libtool.texi (all over): Use @option and @command.
 	Some more minor formatting updates, typos.
 
-	* m4/libtool.m4 (_LT_PROG_ECHO_BACKSLASH): Fix variable
-	quoting; allows lt_ECHO to match --fallback-echo again.
+	* m4/libtool.m4 (_LT_PROG_ECHO_BACKSLASH): Fix variable	quoting;
+	allows lt_ECHO to match --fallback-echo again.
 
 	* config/ltmain.m4sh (func_extract_archives): Not all shells grok
 	`read -r' (unnecessary in this case).
 	Reported by Ralf Menzel <menzel@ls6.cs.uni-dortmund.de>.
 
-	* config/general.m4sh: New variable quote_scanset..
-	(func_quote_for_eval, func_quote_for_expand)  ..use it to work around
-	SunOS ksh `case' backslash-escaping bug: protect character class by
-	variable expansion.  Reported by Alexander Kurz <alexander.kurz@qsc.de>.
+	* config/general.m4sh: New variable quote_scanset...
+	(func_quote_for_eval, func_quote_for_expand): ...use it to work
+	around SunOS ksh `case' backslash-escaping bug: protect character
+	class by variable expansion.
+	Reported by Alexander Kurz <alexander.kurz@qsc.de>.
 
 	* tests/quote.test: Restart under the correct shell (the one
 	$ECHO was computed for).
@@ -62,33 +72,34 @@
 
 2004-12-20  Peter O'Gorman  <peter@pogma.com>
 
-	* config/ltmain.m4sh (func_extract_archives,func_extract_an_archive): 
-	On darwin, uniq can not take the flags -cd together, thanks to Ralf
-	for the fix, also ar does not accept N, so we use the fact that
-	ar x libfoo.a foo.o will always extract the first foo.o in the
-	archive and we then delete foo.o from the archive, which will also
-	delete only the first foo.o, then rinse and repeat. Also add markers
-	for the testuite.
-	* m4/libtool.m4 (_LT_CONFIG): Add a marker so that we can use a sed
-	expression to find the shell functions in libtool.
+	* config/ltmain.m4sh (func_extract_archives)
+	(func_extract_an_archive): On darwin, uniq can not take the flags
+	-cd together, thanks to Ralf for the fix, also ar does not accept
+	N, so we use the fact that ar x libfoo.a foo.o will always extract
+	the first foo.o in the archive and we then delete foo.o from the
+	archive, which will also delete only the first foo.o, then rinse
+	and repeat. Also add markers for the testuite.
+	* m4/libtool.m4 (_LT_CONFIG): Add a marker so that we can use a
+	sed expression to find the shell functions in libtool.
 	* tests/functests.at: Test this feature.
 	* tests/testsuite.at: Add the test.
 	* tests/Makefile.am: Add the test.
 
 2004-12-20  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
-	* libtoolize.m4sh: Install `install-sh' as well, needed for configure ..
-	* Makefile.am, Makefile.maint: .. install, update it.
-	* NEWS, doc/libtool.texi (Distributing): .. document it.
+	* libtoolize.m4sh: Install `install-sh' as well, needed for
+	configure.
+	* Makefile.am, Makefile.maint: Install, update it.
+	* NEWS, doc/libtool.texi (Distributing): Document it.
 	Reported by Ross Boylan <ross@biostat.ucsf.edu>.
 
-	* m4/libtool.m4 [solaris] (_LT_LINKER_SHLIBS): Add '${wl}-z ${wl}text'
-	to archive_cmds and archive_expsyms_cmds.  I.e., do not allow nopic in
-	shared libraries.
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [solaris]: Add '${wl}-z
+	${wl}text' to archive_cmds and archive_expsyms_cmds.  I.e., do not
+	allow nopic in shared libraries.
 
-	* m4/libtool.m4 [solaris] (_LT_LINKER_SHLIBS): Change no_undefined_flag
-	back to ' -z defs'.  Problems with linking against libgcc.a will have
-	to be resolved differently.
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [solaris]: Change
+	no_undefined_flag back to ' -z defs'.  Problems with linking
+	against libgcc.a will have to be resolved differently.
 
 	* tests/demo-nopic.test [solaris, sunos]: Skip test.
 
@@ -97,7 +108,7 @@
 	* libtool.m4 [linux] (_LT_COMPILER_PIC, _LT_LANG_CXX_CONFIG):
 	Match icpc* and ecpc* (ia64 version of icpc) instead of only icpc.
 
-	* libltdl/lt__dirent.c [mingw] (opendir): Fix write of constant
+	* libltdl/lt__dirent.c (opendir) [mingw]: Fix write of constant
 	strings past end of buffer.
 	(opendir, readdir): Fix read past end of buffer.
 
@@ -126,8 +137,9 @@
 2004-12-13  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG):
-	Append -G to link command-line on AIX to honor -brtl on command-line
-	(runtime linking). Already done for IBM C/C++ compilers.
+	Append -G to link command-line on AIX to honor -brtl on
+	command-line (runtime linking). Already done for IBM C/C++
+	compilers.
 
 2004-12-12  Patrick Welche <prlw1@newn.cam.ac.uk>
 
@@ -137,7 +149,8 @@
 2004-12-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/ltmain.m4sh (func_extract_archive): Send stderr of $NM
-	to /dev/null.  Reported by Martin Waitz <tali@admingilde.org>.
+	to /dev/null.
+	Reported by Martin Waitz <tali@admingilde.org>.
 
 2004-12-09  Albert Chin-A-Young  <china@thewrittenword.com>
 
@@ -147,18 +160,21 @@
 
 2004-12-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
-	* config/ltmain.m4sh (func_mode_finish) [solaris]: Fix [] escaping bug.
+	* config/ltmain.m4sh (func_mode_finish) [solaris]: Fix [] escaping
+	bug.
 
-	* config/ltmain.m4sh (all over the map): Make use of func_basename and
-	func_dirname in most occasions.
+	* config/ltmain.m4sh (all over the map): Make use of func_basename
+	and func_dirname in most occasions.
 
-	* m4/libtool.m4 (_LT_CHECK_XSI_SHELL, _LT_PROG_XSI_SHELLFNS): New macros
-	to detect at `configure' time whether the shell supports some XSI
-	extensions and to copy appropriate versions of new shell functions into
-	`libtool' through `config.status'.  Copied functions are Bourne and XSI
-	variants of func_basename, func_dirname (a variant of `dirname' suitable
-	for libtool).  (_LT_SETUP) Require _LT_CHECK_XSI_SHELL.
-	(_LT_CONFIG)  Use _LT_PROG_XSI_SHELLFNS to insert into `libtool' at marker.
+	* m4/libtool.m4 (_LT_CHECK_XSI_SHELL, _LT_PROG_XSI_SHELLFNS): New
+	macros to detect at `configure' time whether the shell supports
+	some XSI extensions and to copy appropriate versions of new shell
+	functions into `libtool' through `config.status'.  Copied
+	functions are Bourne and XSI variants of func_basename,
+	func_dirname (a variant of `dirname' suitable for libtool).
+	(_LT_SETUP): Require _LT_CHECK_XSI_SHELL.
+	(_LT_CONFIG):  Use _LT_PROG_XSI_SHELLFNS to insert into `libtool'
+	at marker.
 
 	* config/ltmain.m4sh: Set marker for insertion of shell functions.
 
@@ -187,19 +203,20 @@
 2004-11-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/ltmain.m4sh (func_lalib_p): Update function
-	description. (func_lalib_unsafe_p): New function with same
-	functionality but written without forks; this function is safe
-	to use for cases where the argument either does not exist or
-	is required to be a lalib for correct operation.
+	description.
+	(func_lalib_unsafe_p): New function with same functionality but
+	written without forks; this function is safe to use for cases
+	where the argument either does not exist or is required to be a
+	lalib for correct operation.
 	* NEWS: Mention the fact that stdin is not to be used.
-	* (func_mode_execute, func_mode_install, func_mode_link):
-	Use func_lalib_unsafe_p where appropriate.
-	* (func_mode_execute): For the program wrapper, use
+	* config/ltmain.m4sh (func_mode_execute, func_mode_install)
+	(func_mode_link): Use func_lalib_unsafe_p where appropriate.
+	(func_mode_execute): For the program wrapper, use
 	func_ltwrapper_p instead of func_lalib_p.
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS): Treat linux-dietlibc with
-	the `diet' compiler wrapper (as opposed to the `diet-dyn'
-	wrapper) as a static-only platform.
+	the `diet' compiler wrapper (as opposed to the `diet-dyn' wrapper)
+	as a static-only platform.
 	* NEWS: Updated.
 
 	* libltdl/ltdl.c (trim): Use memcpy instead of strncpy here, to
@@ -266,9 +283,10 @@
 
 2004-11-24  Jeff Squyres  <jsquyres@lam-mpi.org>
 
-	* m4/libtool.m4 [linux] (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS,
-	_LT_LANG_CXX_CONFIG), NEWS, THANKS: Support for Portland Group
-	(aka "pgi") compilers.
+	* m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS)
+	(_LT_LANG_CXX_CONFIG) [linux]: Support for Portland Group (aka
+	"pgi") compilers.
+	* NEWS, THANKS: Updated.
 
 2004-11-24  Gary V. Vaughan  <gary@gnu.org>
 
@@ -363,7 +381,7 @@
 
 2004-11-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
-	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin/mingw/pw32]:
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin, mingw, pw32]:
 	tag-protect setting of ld_shlibs.
 
 2004-11-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
@@ -380,7 +398,7 @@
 2004-11-17  Mats Rynge  <rynge@isi.edu>
 
 	* libtool.m4 [linux]: Use only the CC basename in case statment
-	when checking for icc/ecc. Allows for setting CC to the full path
+	when checking for icc/ecc.  Allows for setting CC to the full path
 	to the compiler.
 
 	* libtool.m4 [solaris]: Added missing 'with linker' flags to
@@ -422,7 +440,8 @@
 	Fix error message with `-objectlist' file that does not exist.
 	* tests/objectlist.test:  New test for this.
 
-	* Makefile.am: config/ltmain.sh is generated by config/ltmain.m4sh.
+	* Makefile.am: config/ltmain.sh is generated by
+	config/ltmain.m4sh.
 
 2004-11-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
