--- a/HACKING
+++ b/HACKING
@@ -85,25 +85,35 @@ and is not part of a release distribution.
 
 yyyy-mm-dd  Name of Author  <email@address>
 
-* 'Name of Author' is the name of the person who made the change being
-  documented, or if that person didn't supply a ChangeLog, the author
-  of the ChangeLog entry.  If more than one person collaborated on the
-  change, additional authors can be listed on subsequent lines, thus:
+*  If more than one person collaborated on the change, additional
+   authors can be listed on subsequent lines, thus:
 
 yyyy-mm-dd  Name of Main Author  <email@address>,
             Name of Contributor  <another@email.address>
+
+* Where a change author did not supply a copyright assignment, but the
+  changes they submitted were sufficiently trivial to commit in any case
+  (see the GCS for guidelines on this), then flag this against their
+  name in the header, thus:
+
+yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
+
+* In ChangeLog.2004 and earlier, 'Name of Author' was sometimes the name
+  of the author of the ChangeLog when the person who made the change
+  being documented didn't supply one.   In that case separated from
+  the previous field by a blank line and indented by 1 tab (note, only
+  1 space between fields here) you will see:
+
+	From Author of Actual Change <email@address>:
+
+  As of now, don't do that anymore, since the GNU Coding Standards say
+  that the author of the change must be credited in the main entry
+  header for legal purposes.
 
 * Preferably the next part should be a description of the overall
   purpose of the change, separated from the header by a blank line,
   indented by 1 tab, and filled at column 72.  The last character of the
   description should be a colon, :.
-
-* If the author of the change is different from the author of the
-  ChangeLog, then the change outhor should be credited, separated from
-  the previous field by a blank line and indented by 1 tab (note, only
-  1 space between fields here):
-
-	From Author of Actual Change <email@address>:
 
 * Changes to each file come next.  Each new file starts on a new line,
   indented by 1 tab and starting with an asterisk and a space.  Multiple
@@ -145,13 +155,12 @@ yyyy-mm-dd  Name of Main Author  <email@address>,
   formatting.
 
 
-2005-01-08  Gary V. Vaughan  <gary@gnu.org>,
+2005-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change),
             Peter O'Gorman  <peter@pogma.com>
 
 	This is the overall description of the purpose of this change
 	and any useful background for a model ChangeLog entry:
 
-	From Ralf Wildenhues <Ralf.Wildenhues@gmx.de>:
 	* HACKING: Updated copyright.  This isn't attached to a
 	particular section of the file, so it comes first.
 	(Editing 'ChangeLog'): New section.  This applies to the same
