--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/libltdl/lt__glibc.h: Move all exported slist
+	symbols into the lt__* namespace.
+	* libltdl/libltdl/lt__private.h, libltdl/libltdl/slist.h:
+	Adjust includes.
+
 2005-01-10  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh (func_mode_link): Fix
