--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-01-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/libltdl/lt__glibc.h: Move all exported slist
+	symbols into the lt__* namespace.
+	* libltdl/libltdl/lt__private.h, libltdl/libltdl/slist.h:
+	Adjust includes.
+
 	* tests/sh.test: After `set dummy [...]', check for `shift'
 	within the same and following line.
 	* config/ltmain.m4sh (func_enable_tag, func_mode_install)
