--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-10  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh (func_mode_link): Fix
+	inherited_linker_flags so it puts it on the link line when
+	linking shared libraries as well as when linking executables.
+	Reported by: Albert Chin-A-Young <china@thewrittenword.com>
+
 2005-01-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/libltdl/lt__glibc.h: Move all exported slist
