* config/ltmain.m4sh: New option `--verbose'/`-v' to enable override of `--silent'.  Verbose is the default behavior. * doc/libtool.texi (Invoking libtool): Document it.

--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1176,6 +1176,10 @@ that libtool knows it can safely.
 @itemx --silent
 Do not print out any progress or informational messages.
 
+@item -v
+@itemx --verbose
+Print out progress and informational messages (enabled by default).
+
 @item --version
 Print libtool version information and exit.
 @end table
