--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-12  Guido Draheim  <guidod-2003-@gmx.de>  (tiny change)
+
+	* m4/libtool.m4 (AC_PROG_SED): Don't break test loop early.
+
 2005-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* TODO: Update.
