--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/Makefile.am: Add $(AM_LDFLAGS) to all per-target
+	variables *_LDFLAGS as per CVS Automake semantic change.
+
 2005-01-16  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh (func_mode_link): Don't pass through 
