--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_SETUP) [mingw, cygwin, pw32, os2]:
+	Add _LT_DECLs for host_os, build_alias, build and build_os.
+	host_os and build were used in a few occasions in ltmain.m4sh
+	and affect above-mentioned systems, the others are added for
+	symmetry and in order to be able to detect cross-compiling.
+
 2005-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/Makefile.am: Add $(AM_LDFLAGS) to all per-target
