--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_CONFIG) [mingw, cygwin, pw32, os2]:
+	Add _LT_DECLs for host_os, build_alias, build and build_os.
+	host_os and build were used in a few occasions in ltmain.in
+	and affect above-mentioned systems, the others are added for
+	symmetry.
+
 2005-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 	
 	* libltdl.c (try_dlopen): Fix memleak.
