--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/defs.m4sh: Extract $build from $LIBTOOL.
+	(func_configure): Pass --host if $host != $build.
+	(func_exec): Try executing cross-compiled binaries (e.g. i686 -> i386),
+	but SKIP rather than FAIL.
+	* tests/depdemo-relink.test: Do not try to access possibly non-
+	existent files.  SKIP rather than FAIL or PASS falsely when
+	cross-compiling.
+
 	* m4/libtool.m4 (_LT_SETUP) [mingw, cygwin, pw32, os2]:
 	Add _LT_DECLs for host_os, build_alias, build and build_os.
 	host_os and build were used in a few occasions in ltmain.m4sh
