--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-25  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* config/ltmain.m4sh (func_mode_link) [irix]: Preserve processor
+	option for SGI Compiler (-r[0-9][0-9]*).
+
 2005-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_PROG_XSI_SHELLFNS): Define Bourne and XSI
