--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-25  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* ltmain.in [irix]: Preserve processor option for SGI Compiler
+	(-r[0-9][0-9]*).
+
 2005-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_CONFIG) [mingw, cygwin, pw32, os2]:
