--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_PROG_XSI_SHELLFNS): Work around pdksh
+	positional parameter expansion bug.
+
 2005-01-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/ltmain.m4sh: Fix endless loop in cmdline parsing.
