--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-26  Craig Dooley  <xlnxminusx@gmail.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS, m4/libtool.m4, config/ltmain.m4sh [dragonfly]:
+	Add support for DragonFly.
+
 2005-01-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/ltmain.m4sh: Fix endless loop in cmdline parsing.
