--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-26  Craig Dooley  <xlnxminusx@gmail.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS, libtool.m4, ltmain.in [dragonfly]: Add support for DragonFly.
+
 2005-01-25  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* ltmain.in [irix]: Preserve processor option for SGI Compiler
