--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-29  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in [darwin]: Allow -framework foo through when given on
+	the command line.
+
 2005-01-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/Makefile.am: also re-export CPP, F77, FFLAGS, CXX,
