--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/quote.test: Match link quoting against `"$wl"', not `-Wl,'.
+
 2005-01-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG, AC_LIBTOOL_PROG_LD_SHLIBS)
